# mle-training-2

./: .flake8  .gitignore  README.md  env.yml  nonstandardcode.py  pyproject.toml
.github/workflows/: build-and-test.yml
docs/source/: conf.py  housepred.rst  index.rst  modules.rst
notebooks/: Assignment3_1.ipynb
scripts/: ingest_data.py  score.py  train.py
src/housepred/: ingest_data.py  logger.py  pipeline.py  score.py  train.py
tests/: test_custom_install.py  test_ingest_data.py  test_install.py  test_score.py  test_train.py
