[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housepred"
version = "0.1.0"
description = "A sample package for housing data analysis"
authors = [
    { name="ritam", email="ritam.sharma@tigeranalytics.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "six",
    "mlflow",
]

[project.scripts]
ingest_data = "housepred.ingest_data:main"
train = "housepred.train:cli"
score = "housepred.score:cli"
pipeline = "housepred.pipeline:cli"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
